--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
         "node-elm-compiler": "^5.0.3",
         "puppeteer": "^1.18.0",
         "selenium-webdriver": "^4.0.0-alpha.4"
+    },
+    "devDependencies": {
+        "elm": "^0.19.1-3",
+        "elm-analyse": "^0.16.5",
+        "elm-format": "^0.8.2"
     }
 }
